syntax = "proto3";

package near_users;

option go_package = "./protos/near_users;near_users";


service NearUsers {
   rpc StreamNearbyUsers(stream UserTokenAndLocation) returns (stream NearbyUsersResponse);
}

message UserTokenAndLocation {
     string JwtToken = 1;
   double latitude = 2;
   double longitude = 3;
}

message NearbyUsersResponse {
   repeated User nearby_users = 1;
}

message User {
  string id = 1;
  double latitude = 2;
  double longitude = 3;
  string name = 4;
}
